# fetch-by-similarity

./: .gitignore  Config  LICENSE.md  README.md
harness/: cleartext_impl.py  generate_dataset.py  generate_query.py  params.py  run_submission.py  utils.py  verify_result.py
scripts/: build_task.sh  get_openfhe.sh
submission/: CMakeLists.txt
submission/include/: params.h  running_sums.h  slot_replication.h  utils.h
submission/src/: client_decrypt_decode.cpp  client_encode_encrypt_db.cpp  client_encode_encrypt_query.cpp  client_key_generation.cpp  client_postprocess.cpp  client_preprocess_dataset.cpp  running_sums.cpp  server_encrypted_compute.cpp  server_preprocess_dataset.cpp  slot_replication.cpp
